--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <div class="home__background__image"> 
         <div class="container"> 
-            <header class="nav__cabecalho">
+            <header class="header__cabecalho">
                 <figure>
                     <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="nav__logo__kenzie">
                 </figure>
