--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Actor&family=Darker+Grotesque&family=Iceland&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="/styles/style.css">
     <title>THE LAST OF US</title>
@@ -17,11 +17,11 @@
     
     <div class="home__background__image"> 
         <div class="container"> 
-            <header class="header__cabecalho">
+            <header class="flex"> <!--header__cabecalho-->
                 <figure>
-                    <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="nav__logo__kenzie">
+                    <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="nav__logo__kenzie"> <!--nao usei essa classe-->
                 </figure>
-                <nav class="nav__bar">
+                <nav class="nav__bar"> <!--nao usei essa class-->
                     <ul class="nav__bar__ul">
                         <li>
                             <a href="#">HOME</a>
@@ -49,28 +49,15 @@
                     <button class="active">MORE INFO</button>
                     <button class="inactive">WATCH TEASER</button>
                 </div>
-                <section>
+                <section class="flex-column">
                     <h3>INSIDE</h3>
                     <div>
-                        <ul>
-                            <li>
-                                <img src="img/Ellie & Joel Survival EP 2 2.png" alt="Imagem da Ellie e Joel caminhando">
-                                <div>
-                                    <h4>SURVIVAL</h4>
-                                </div>
+                        <ul class="flex">
+                            <li>SURVIVAL
+                               <!-- <img src="img/Ellie & Joel Survival EP 2 2.png" alt="Imagem de Ellie e Joel no campo">  -->
                             </li>
-                            <li>
-                                <img src="img/Frank & Bill relationship the-last-of-us 1.png" alt="Imagem do Frank e Bill na horta">
-                                <div>
-                                    <h4>RELATIONSHIP</h4>
-                                </div>
-                            </li>
-                            <li>
-                                <img src="img/Ellie & Joel adventure 1.png" alt="Imagem da Ellie e Joel fugindo">
-                                <div>
-                                    <h4>ADVENTURE</h4>
-                                </div>
-                            </li>
+                            <li>RELATIONSHIP</li>
+                            <li>ADVENTURE</li>
                         </ul>
                     </div>
                 </section>
@@ -79,9 +66,9 @@
     </div>
     <!-- INICIO DA SEGUNDA PARTE: EPISODES -->
     <section class="episodes">
-        <div>
-            <section>
-                <h2>EPISODES</h2>
+        <div class="container flex">
+            <section class="posts">
+                <h3>EPISODES</h2> <!--ela falou que nao precisa-->
                 <p>
                     An American post-apocalyptic drama television 
                     series created by Craig Mazin and Neil Druckmann 
@@ -89,7 +76,7 @@
                     mass fungal infection, which forces its hosts to 
                     transform into zombie-like creatures and collapses 
                     society. 
-                </p>
+                </p> <br>
                 <p>
                     The series follows Joel (Pedro Pascal), a smuggler 
                     tasked with escorting the teenage Ellie (Bella 
@@ -99,7 +86,7 @@
                     Tommy, Merle Dandridge as resistance leader 
                     Marlene, and Anna Torv as Joel's smuggler partner 
                     Tess. 
-                </p>
+                </p> <br>
                 <p>
                     The Last of Us was filmed throughout Alberta from 
                     July 2021 to June 2022. It is the first HBO series 
@@ -109,36 +96,36 @@
                 </p>
             </section>
 
-            <ol>   <!--         A LISTA ABAIXO SERÁ FEITA NO JAVASCRIPT, 
+            <ol class="episodes__list">   <!--         A LISTA ABAIXO SERÁ FEITA NO JAVASCRIPT, 
                                      SERÁ COMENTADA DEPOIS, 
                                             PQ? 
                               PQ COMO O JS É DINÂMICO, É SÓ ADICONAR O NOVO EPISÓDIO. -->
-                <li>
+                <li class="card">
                     <img src="img/The_Last_of_Us_-_When_You're_Lost_in_the_Darkness 3.png" alt="Imagem episódio 01">
-                        <div>
-                            <h4> "When You're Lost in the Darkness"</h4>
-                            <p>
-                                In 2003, a mass fungal infection of mutated Cordyceps 
-                                sparks a global pandemic. Joel flees with his daughter, 
-                                Sarah, and brother, Tommy, from their Texas home; 
-                                Sarah is killed by a soldier.
-                            </p>
+                    <div class="card__texto">
+                        <h4> "When You're Lost in the Darkness"</h4>
+                        <p>
+                            In 2003, a mass fungal infection of mutated Cordyceps 
+                            sparks a global pandemic. Joel flees with his daughter, 
+                            Sarah, and brother, Tommy, from their Texas home; 
+                            Sarah is killed by a soldier.
+                        </p>
                         </div>
                    </li>
-                <li>
+                <li class="card">
                     <img src="img/The_Last_of_Us_-_Infected 4.png" alt="Imagem episódio 02">
-                        <div>
-                            <h4>"Infected"</h4>
-                            <p>
-                                Two days before the worldwide outbreak, in Jakarta, 
-                                Indonesia, the government shows an infected corpse to 
-                                a mycologist, who tells them there is no cure or vaccine.
-                            </p>
+                    <div class="card__texto">
+                        <h4>"Infected"</h4>
+                        <p>
+                            Two days before the worldwide outbreak, in Jakarta, 
+                            Indonesia, the government shows an infected corpse to 
+                            a mycologist, who tells them there is no cure or vaccine.
+                        </p>
                         </div>
                     </li>
-                <li>
+                <li class="card">
                     <img src="img/The_Last_of_Us_-_Please_Hold_to_My_Hand 2.png" alt="Imagem episódio 03">
-                    <div>
+                    <div class="card__texto">
                         <h4>"Long, Long Time"</h4>
                          <p>
                                 Joel and Ellie begin the hike to meet with Bill and Frank. 
@@ -147,9 +134,9 @@
                          </p>
                         </div>
                     </li>
-                <li>
+                <li class="card">
                     <img src="img/The_Last_of_Us_-_Long_Long_Time 2.png" alt="Imagem episódio 04">
-                    <div>
+                    <div class="card__texto">
                         <h4>"Please Hold to My Hand"</h4>
                         <p>
                             Traveling through Missouri, Joel and 
@@ -163,17 +150,14 @@
     </section>
 
     <footer>
-        <div class="container">
-            <div>
-                <img src="img/Rectangle 54.png" alt="Imagem de fundo gradiente do rodapé">
-            </div>
+        <div class="container flex">
             <figure>
                 <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="logo__kenzie">
             </figure>
             <div>  
                 <h2>PROGRAME O SEU FUTURO AQUI.</h2>
                 <h3>SIGA NOSSAS REDES SOCIAIS</h3>
-                <div>    <!--nao esta na maratona, porem, fazer-->
+               <!-- <div>    nao esta na maratona, porem, fazer-->
                     <ul>
                         <li>
                             <a href="img/icons8-instagram-90 1.png" alt="Imagem Instagram"></a>
@@ -182,7 +166,7 @@
                             <a href="img/LinkedIn.png" alt="Imagem LinkedIn"></a>
                         </li>
                     </ul>
-                </div>   <!-- essa div vai ate aqui -->
+             <!--  </div>    essa div vai ate aqui -->
             </div>  
         </div>
     </footer>
