--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="episodes">
         <div class="container flex">
             <section class="posts">
-                <h3>EPISODES</h2> <!--ela falou que nao precisa-->
+                <h2>EPISODES</h2> <!--ela falou que nao precisa-->
                 <p>
                     An American post-apocalyptic drama television 
                     series created by Craig Mazin and Neil Druckmann 
@@ -151,23 +151,19 @@
 
     <footer>
         <div class="container flex">
-            <figure>
-                <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="logo__kenzie">
-            </figure>
-            <div>  
-                <h2>PROGRAME O SEU FUTURO AQUI.</h2>
-                <h3>SIGA NOSSAS REDES SOCIAIS</h3>
-               <!-- <div>    nao esta na maratona, porem, fazer-->
-                    <ul>
-                        <li>
-                            <a href="img/icons8-instagram-90 1.png" alt="Imagem Instagram"></a>
-                        </li>
-                        <li>
-                            <a href="img/LinkedIn.png" alt="Imagem LinkedIn"></a>
-                        </li>
-                    </ul>
-             <!--  </div>    essa div vai ate aqui -->
-            </div>  
+            <div>
+                <figure>
+                    <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="logo__kenzie">
+                </figure>
+                <section class="flex-column">  
+                    <h2>PROGRAME O SEU FUTURO AQUI.</h2>
+                    <h3>SIGA NOSSAS REDES SOCIAIS</h3>
+                    <div class="footer__icons">    <!--nao esta na maratona, porem, fazer-->
+                        <img src="img/icons8-instagram-90 1.png" alt="Imagem do Instagram">
+                        <img src="img/LinkedIn.png" alt="Imagem do LinkedIn">
+                    </div>        
+                </section> 
+             </div>
         </div>
     </footer>
 </body>
