--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Actor&family=Darker+Grotesque&family=Iceland&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
+   <!-- <link rel="stylesheet" href="./script.js"> -->
+  <!-- <script src="./script.js" defer></script> defer só se for aqui no head, se for no final do body, nao usar defer-->
     <title>THE LAST OF US</title>
 </head>
 
@@ -68,7 +70,7 @@
     <section class="episodes">
         <div class="container flex">
             <section class="posts">
-                <h2>EPISODES</h2> <!--ela falou que nao precisa-->
+                <h2>EPISODES</h2> 
                 <p>
                     An American post-apocalyptic drama television 
                     series created by Craig Mazin and Neil Druckmann 
@@ -100,7 +102,7 @@
                                      SERÁ COMENTADA DEPOIS, 
                                             PQ? 
                               PQ COMO O JS É DINÂMICO, É SÓ ADICONAR O NOVO EPISÓDIO. -->
-                <li class="card">
+               <!--- <li class="card">
                     <img src="img/The_Last_of_Us_-_When_You're_Lost_in_the_Darkness 3.png" alt="Imagem episódio 01">
                     <div class="card__texto">
                         <h4> "When You're Lost in the Darkness"</h4>
@@ -144,7 +146,7 @@
                             Kansas City, where they are ambushed.
                         </p>
                     </div>
-                </li>
+                </li> -->
             </ol>
         </div>
     </section>
@@ -164,5 +166,6 @@
             </section> 
          </div>
     </footer>
+    <!--<script src="./script.js"></script> -->
 </body>
 </html>
