--- a/index.html
+++ b/index.html
@@ -55,11 +55,18 @@
                     <h3>INSIDE</h3>
                     <div>
                         <ul class="flex">
-                            <li>SURVIVAL
-                               <!-- <img src="img/Ellie & Joel Survival EP 2 2.png" alt="Imagem de Ellie e Joel no campo">  -->
+                            <li >
+                                <h5 class="tela__1__textocentro">SURVIVAL</h5>
+                                <img src="./img/EP 2 2.svg" alt="Imagem Ellie e Joel no campo">
                             </li>
-                            <li>RELATIONSHIP</li>
-                            <li>ADVENTURE</li>
+                            <li>
+                                <h5 class="tela__1__textocentro">RELATIONSHIP</h5>
+                                <img src="./img/bill.frank.svg" alt="Imagem de Bill e Frank">
+                            </li>
+                            <li>
+                                <h5 class="tela__1__textocentro">ADVENTURE</h5>
+                                <img src="./img/joel.ellie.scaping.svg" alt="Imagem Joel e Ellie em fuga">
+                            </li>
                         </ul>
                     </div>
                 </section>
@@ -98,56 +105,56 @@
                 </p>
             </section>
 
-            <ol class="episodes__list">   <!--         A LISTA ABAIXO SERÁ FEITA NO JAVASCRIPT, 
-                                     SERÁ COMENTADA DEPOIS, 
-                                            PQ? 
-                              PQ COMO O JS É DINÂMICO, É SÓ ADICONAR O NOVO EPISÓDIO. -->
-               <!--- <li class="card">
-                    <img src="img/The_Last_of_Us_-_When_You're_Lost_in_the_Darkness 3.png" alt="Imagem episódio 01">
-                    <div class="card__texto">
-                        <h4> "When You're Lost in the Darkness"</h4>
-                        <p>
-                            In 2003, a mass fungal infection of mutated Cordyceps 
-                            sparks a global pandemic. Joel flees with his daughter, 
-                            Sarah, and brother, Tommy, from their Texas home; 
-                            Sarah is killed by a soldier.
-                        </p>
-                        </div>
-                   </li>
-                <li class="card">
-                    <img src="img/The_Last_of_Us_-_Infected 4.png" alt="Imagem episódio 02">
-                    <div class="card__texto">
-                        <h4>"Infected"</h4>
-                        <p>
-                            Two days before the worldwide outbreak, in Jakarta, 
-                            Indonesia, the government shows an infected corpse to 
-                            a mycologist, who tells them there is no cure or vaccine.
-                        </p>
-                        </div>
+            <section class="container__episodes__list">
+                <ol class="episodes__list">   <!--A LISTA ABAIXO SERÁ FEITA NO JAVASCRIPT, PQ? 
+                                PQ COMO O JS É DINÂMICO, É SÓ ADICONAR O NOVO EPISÓDIO NA LISTA. -->
+                <!--- <li class="card">
+                        <img src="img/The_Last_of_Us_-_When_You're_Lost_in_the_Darkness 3.png" alt="Imagem episódio 01">
+                        <div class="card__texto">
+                            <h4> "When You're Lost in the Darkness"</h4>
+                            <p>
+                                In 2003, a mass fungal infection of mutated Cordyceps 
+                                sparks a global pandemic. Joel flees with his daughter, 
+                                Sarah, and brother, Tommy, from their Texas home; 
+                                Sarah is killed by a soldier.
+                            </p>
+                            </div>
                     </li>
-                <li class="card">
-                    <img src="img/The_Last_of_Us_-_Please_Hold_to_My_Hand 2.png" alt="Imagem episódio 03">
-                    <div class="card__texto">
-                        <h4>"Long, Long Time"</h4>
-                         <p>
-                                Joel and Ellie begin the hike to meet with Bill and Frank. 
-                                Ellie sees evidence of the government's execution of 
-                                innocents during the early days of the pandemic.
-                         </p>
+                    <li class="card">
+                        <img src="img/The_Last_of_Us_-_Infected 4.png" alt="Imagem episódio 02">
+                        <div class="card__texto">
+                            <h4>"Infected"</h4>
+                            <p>
+                                Two days before the worldwide outbreak, in Jakarta, 
+                                Indonesia, the government shows an infected corpse to 
+                                a mycologist, who tells them there is no cure or vaccine.
+                            </p>
+                            </div>
+                        </li>
+                    <li class="card">
+                        <img src="img/The_Last_of_Us_-_Please_Hold_to_My_Hand 2.png" alt="Imagem episódio 03">
+                        <div class="card__texto">
+                            <h4>"Long, Long Time"</h4>
+                            <p>
+                                    Joel and Ellie begin the hike to meet with Bill and Frank. 
+                                    Ellie sees evidence of the government's execution of 
+                                    innocents during the early days of the pandemic.
+                            </p>
+                            </div>
+                        </li>
+                    <li class="card">
+                        <img src="img/The_Last_of_Us_-_Long_Long_Time 2.png" alt="Imagem episódio 04">
+                        <div class="card__texto">
+                            <h4>"Please Hold to My Hand"</h4>
+                            <p>
+                                Traveling through Missouri, Joel and 
+                                Ellie are forced to take a detour through 
+                                Kansas City, where they are ambushed.
+                            </p>
                         </div>
-                    </li>
-                <li class="card">
-                    <img src="img/The_Last_of_Us_-_Long_Long_Time 2.png" alt="Imagem episódio 04">
-                    <div class="card__texto">
-                        <h4>"Please Hold to My Hand"</h4>
-                        <p>
-                            Traveling through Missouri, Joel and 
-                            Ellie are forced to take a detour through 
-                            Kansas City, where they are ambushed.
-                        </p>
-                    </div>
-                </li> -->
-            </ol>
+                    </li> -->
+                </ol>
+            </section>
         </div>
     </section>
 
@@ -158,14 +165,15 @@
             </figure>
             <section class="flex-column">  
                 <h2>PROGRAME O SEU FUTURO AQUI.</h2>
+                <h4>Projeto desenvolvido por Mádjan Azevedo na Maratona Kenzie Academy</h4>
                 <h3>SIGA NOSSAS REDES SOCIAIS</h3>
-                <div class="footer__icons">    <!--nao esta na maratona, porem, fazer-->
+                <div class="footer__icons">    
                     <img src="img/icons8-instagram-90 1.png" alt="Imagem do Instagram">
                     <img src="img/LinkedIn.png" alt="Imagem do LinkedIn">
                 </div>        
             </section> 
          </div>
     </footer>
-    <!--<script src="./script.js"></script> -->
+    <script src="./script.js"></script> 
 </body>
 </html>
