--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <body>
     
     <div class="home__background__image"> 
-        <div class="container"> 
-            <header class="flex"> <!--header__cabecalho-->
+        <div class="container__home__principal__section"> 
+            <header class="container__header__cabecalho flex">  <!--esse flex está vinculado a conf. gerais-->
                 <figure>
-                    <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="nav__logo__kenzie"> <!--nao usei essa classe-->
+                    <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="nav__logo__kenzie"> 
                 </figure>
-                <nav class="nav__bar"> <!--nao usei essa class-->
+                <nav class="nav__bar"> 
                     <ul class="nav__bar__ul">
-                        <li>
+                        <li> <!--no css está: nav > ul > li > a -->
                             <a href="#">HOME</a>
                         </li>
                         <li>
@@ -163,14 +163,14 @@
             <figure>
                 <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="logo__kenzie">
             </figure>
-            <section class="flex-column">  
+            <section class="rodape__flex-column">  
                 <h2>PROGRAME O SEU FUTURO AQUI.</h2>
-                <h4>Projeto desenvolvido por Mádjan Azevedo na Maratona Kenzie Academy</h4>
                 <h3>SIGA NOSSAS REDES SOCIAIS</h3>
                 <div class="footer__icons">    
                     <img src="img/icons8-instagram-90 1.png" alt="Imagem do Instagram">
                     <img src="img/LinkedIn.png" alt="Imagem do LinkedIn">
-                </div>        
+                </div>  
+                <h5 class="madjan__footer-paragrafo">Projeto desenvolvido por Kenzie Academy e desenvolvido na Maratona Kenzie Academy - The Last Of Us e executado por Mádjan Azevedo</h5>      
             </section> 
          </div>
     </footer>
