--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     
     <div class="home__background__image"> 
-        <div class="container__home__principal__section"> 
+        <div class="container__home__section"> 
             <header class="container__header__cabecalho flex">  <!--esse flex está vinculado a conf. gerais-->
                 <figure>
                     <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="nav__logo__kenzie"> 
@@ -26,22 +26,22 @@
                 <nav class="nav__bar"> 
                     <ul class="nav__bar__ul">
                         <li> <!--no css está: nav > ul > li > a -->
-                            <a href="#">HOME</a>
+                            <a class="nav__bar__ul__a" href="#">HOME</a>
                         </li>
                         <li>
-                            <a href="#">EPISODES</a>
+                            <a class="nav__bar__ul__a" href="#">EPISODES</a>
                         </li>
                         <li>
-                            <a href="#">STORY</a>
+                            <a class="nav__bar__ul__a" href="#">STORY</a>
                         </li>
                         <li>
-                            <a href="#">GALLERY</a>
+                            <a class="nav__bar__ul__a" href="#">GALLERY</a>
                         </li>
                     </ul>
                 </nav>
             </header>
-            <!-- INICIO DA MAIN: THE LAST OF US -->
-            <main class="thelastofus__antesdobotao">
+            <!-- INICIO DA MAIN: A PARTIR DO TÍTULO, THE LAST OF US -->
+            <main class="main__principal">
                 <h1>THE LAST OF US</h1>
                 <p>
                     When you are lost in the dark, look for the <br>
