--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- INICIO DA MAIN: A PARTIR DO TÍTULO, THE LAST OF US -->
             <main class="main__principal">
                 <h1>THE LAST OF US</h1>
-                <p>
+                <p class="main__principal__paragrafo">
                     When you are lost in the dark, look for the <br>
                     light, believe in the fireflies.
                 </p>
@@ -51,20 +51,20 @@
                     <button class="active">MORE INFO</button>
                     <button class="inactive">WATCH TEASER</button>
                 </div>
-                <section class="flex-column">
-                    <h3>INSIDE</h3>
-                    <div>
-                        <ul class="flex">
+                <section class="main__section__inside"> <!--ex flex-column-->
+                    <div class="main__section__inside__div">
+                        <h3>INSIDE</h3> 
+                        <ul class="main__section__inside__ul"> <!--ex flex-->
                             <li >
-                                <h5 class="tela__1__textocentro">SURVIVAL</h5>
+                                <h5 class="tela__1__texto-central">SURVIVAL</h5>
                                 <img src="./img/EP 2 2.svg" alt="Imagem Ellie e Joel no campo">
                             </li>
                             <li>
-                                <h5 class="tela__1__textocentro">RELATIONSHIP</h5>
+                                <h5 class="tela__1__texto-central">RELATIONSHIP</h5>
                                 <img src="./img/bill.frank.svg" alt="Imagem de Bill e Frank">
                             </li>
                             <li>
-                                <h5 class="tela__1__textocentro">ADVENTURE</h5>
+                                <h5 class="tela__1__texto-central">ADVENTURE</h5>
                                 <img src="./img/joel.ellie.scaping.svg" alt="Imagem Joel e Ellie em fuga">
                             </li>
                         </ul>
