--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
                         <h3>INSIDE</h3> 
                         <ul class="main__section__inside__ul"> <!--ex flex-->
                             <li >
-                                <h5 class="tela__1__texto-central">SURVIVAL</h5>
+                                <h5 class="main__section__inside__texto-centro">SURVIVAL</h5>
                                 <img src="./img/EP 2 2.svg" alt="Imagem Ellie e Joel no campo">
                             </li>
                             <li>
-                                <h5 class="tela__1__texto-central">RELATIONSHIP</h5>
+                                <h5 class="main__section__inside__texto-centro">RELATIONSHIP</h5>
                                 <img src="./img/bill.frank.svg" alt="Imagem de Bill e Frank">
                             </li>
                             <li>
-                                <h5 class="tela__1__texto-central">ADVENTURE</h5>
+                                <h5 class="main__section__inside__texto-centro">ADVENTURE</h5>
                                 <img src="./img/joel.ellie.scaping.svg" alt="Imagem Joel e Ellie em fuga">
                             </li>
                         </ul>
