--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     </div>
     <!-- INICIO DA SEGUNDA PARTE: EPISODES -->
     <section class="episodes">
-        <div class="container flex">
-            <section class="posts">
-                <h2>EPISODES</h2> 
-                <p>
+        <div class="container__episodes"> <!-- ex flex -->
+            <section class="container__episodes__posts">
+                <h2 class="container__episodes__posts-titulo">EPISODES</h2> 
+                <p class="container__episodes__posts-paragrafo">
                     An American post-apocalyptic drama television 
                     series created by Craig Mazin and Neil Druckmann 
                     for HBO. Twenty years into a pandemic caused by a 
@@ -86,7 +86,7 @@
                     transform into zombie-like creatures and collapses 
                     society. 
                 </p> <br>
-                <p>
+                <p class="container__episodes__posts-paragrafo">
                     The series follows Joel (Pedro Pascal), a smuggler 
                     tasked with escorting the teenage Ellie (Bella 
                     Ramsey) across a post-apocalyptic United States. 
@@ -96,7 +96,7 @@
                     Marlene, and Anna Torv as Joel's smuggler partner 
                     Tess. 
                 </p> <br>
-                <p>
+                <p class="container__episodes__posts-paragrafo">
                     The Last of Us was filmed throughout Alberta from 
                     July 2021 to June 2022. It is the first HBO series 
                     based on a video game, and is a joint production by 
