--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             <section class="container__episodes__list">
                 <ol class="episodes__list">   <!--A LISTA ABAIXO SERÁ FEITA NO JAVASCRIPT, PQ? 
                                 PQ COMO O JS É DINÂMICO, É SÓ ADICONAR O NOVO EPISÓDIO NA LISTA. -->
-                <!--- <li class="card">
-                        <img src="img/The_Last_of_Us_-_When_You're_Lost_in_the_Darkness 3.png" alt="Imagem episódio 01">
-                        <div class="card__texto">
+               <!-- <li class="card"> --> 
+                       <!-- <img src="img/The_Last_of_Us_-_When_You're_Lost_in_the_Darkness 3.png" alt="Imagem episódio 01">  -->
+                    <!---    <div class="card__texto">
                             <h4> "When You're Lost in the Darkness"</h4>
                             <p>
                                 In 2003, a mass fungal infection of mutated Cordyceps 
@@ -151,8 +151,8 @@
                                 Ellie are forced to take a detour through 
                                 Kansas City, where they are ambushed.
                             </p>
-                        </div>
-                    </li> -->
+                        </div> -->
+                    </li>
                 </ol>
             </section>
         </div>
