setup new container html & css

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <!-- INICIO DA SEGUNDA PARTE: EPISODES -->
     <section class="episodes">
-        <div class="container__episodes"> <!-- ex flex -->
+        <div class="container__episodes"> <!-- ex flex --> <!--essa div que aumenta ou diminui o tamanho da imagem-->
             <section class="container__episodes__posts">
                 <h2 class="container__episodes__posts-titulo">EPISODES</h2> 
                 <p class="container__episodes__posts-paragrafo">
@@ -159,18 +159,20 @@
     </section>
 
     <footer>
-        <div class="container flex">
+        <div class="container__rodape">
             <figure>
                 <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="logo__kenzie">
             </figure>
             <section class="rodape__flex-column">  
-                <h2>PROGRAME O SEU FUTURO AQUI.</h2>
-                <h3>SIGA NOSSAS REDES SOCIAIS</h3>
+                <h2 class="container__rodape__section__titulo-h2">PROGRAME O SEU FUTURO AQUI.</h2>
+                <h3  class="container__rodape__section__titulo-h3">SIGA NOSSAS REDES SOCIAIS</h3>
                 <div class="footer__icons">    
                     <img src="img/icons8-instagram-90 1.png" alt="Imagem do Instagram">
                     <img src="img/LinkedIn.png" alt="Imagem do LinkedIn">
                 </div>  
-                <h5 class="madjan__footer-paragrafo">Projeto desenvolvido por Kenzie Academy e desenvolvido na Maratona Kenzie Academy - The Last Of Us e executado por Mádjan Azevedo</h5>      
+                <div class="container__rodape__paragrafo">
+                    <h5 class="container__rodape__paragrafo-madjan">Projeto desenvolvido por Kenzie Academy e desenvolvido na Maratona Kenzie Academy - The Last Of Us e executado por Mádjan Azevedo</h5>      
+                </div>
             </section> 
          </div>
     </footer>
