--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Actor&family=Darker+Grotesque&family=Iceland&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="stylesheet" href="./styles/style.css">
-   <!-- <link rel="stylesheet" href="./script.js"> -->
+  <!-- <link rel="stylesheet" href="./script.js"> -->
   <!-- <script src="./script.js" defer></script> defer só se for aqui no head, se for no final do body, nao usar defer-->
     <title>THE LAST OF US</title>
 </head>
@@ -163,16 +163,21 @@
             <figure>
                 <img src="img/KenzieAcademyWHorizontal 1.png" alt="Logo Kenzie" class="logo__kenzie">
             </figure>
-            <section class="rodape__flex-column">  
+            <section class="container__rodape__section">
                 <h2 class="container__rodape__section__titulo-h2">PROGRAME O SEU FUTURO AQUI.</h2>
                 <h3  class="container__rodape__section__titulo-h3">SIGA NOSSAS REDES SOCIAIS</h3>
                 <div class="footer__icons">    
                     <img src="img/icons8-instagram-90 1.png" alt="Imagem do Instagram">
                     <img src="img/LinkedIn.png" alt="Imagem do LinkedIn">
                 </div>  
-                <div class="container__rodape__paragrafo">
-                    <h5 class="container__rodape__paragrafo-madjan">Projeto desenvolvido por Kenzie Academy e desenvolvido na Maratona Kenzie Academy - The Last Of Us e executado por Mádjan Azevedo</h5>      
-                </div>
+                <h5 class="container__rodape__titulo-madjan-h5">
+                <p class="container__rodape__paragrafo-madjan">
+                    Projeto desenvolvido por Kenzie Academy para 
+                    Maratona Kenzie Academy<br> 
+                    - The Last Of Us e 
+                    executado por Mádjan Azevedo -
+                </p>
+                </h5>
             </section> 
          </div>
     </footer>
